fix horizontal scroll overflow

--- a/client/src/styles/Input.css
+++ b/client/src/styles/Input.css
@@ -149,6 +149,7 @@ input::-webkit-inner-spin-button {
   margin: 0 auto;
   height: 100%;
   overflow: auto;
+  overflow-x: hidden;
   font-size: 1.3rem;
   border: 1px solid white;
   display: flex;
